janky fixes for home header on mobile

--- a/assets/style/_core.scss
+++ b/assets/style/_core.scss
@@ -14,3 +14,9 @@ h3,
 h4 {
     font-family: $fn-heading;
 }
+
+main {
+    max-width: 80em;
+    padding: 1em;
+    margin: 0 auto;
+}
