--- a/assets/style/pages/_home.scss
+++ b/assets/style/pages/_home.scss
@@ -3,8 +3,9 @@ body#home {
     header {
         margin: 0;
         padding: 0;
-        text-align: center;
+        min-height: 40vh;        
 
+        text-align: center;
         border-top: 4px solid $fg;
         border-bottom: 4px solid $fg;
 
@@ -12,7 +13,7 @@ body#home {
         div.header-content {
             position: relative;
             padding: 0 5vw;
-            height: 40vh;
+            min-height: 40vh;
             width: 90vw;
 
             // vertically align content in each side
@@ -46,7 +47,9 @@ body#home {
             
             // bring watch image up behind hero
             &:nth-of-type(2) {
-                margin-top: -40vh;
+                position: relative;
+                transform: translateY(-100%);
+                margin-bottom: -100%;
                 z-index: -1;
             }
         }
